--- a/src/main/resources/templates/Frontend/Main/CheckOut.mustache
+++ b/src/main/resources/templates/Frontend/Main/CheckOut.mustache
@@ -297,7 +297,6 @@
                         <span class="badge badge-secondary badge-pill">3</span>
                     </h4>
                     <ul class="list-group mb-3">
-
                         {{#userCart}}
                         <li class="list-group-item d-flex justify-content-between lh-condensed">
                             <div>
@@ -306,11 +305,8 @@
                             </div>
                             <span class="text-muted">{{price}}</span>
                         </li>
-
                         {{/userCart}}
-
                     </ul>
-
                     <form class="card p-2">
                         <div class="input-group">
                             <input type="text" class="form-control" placeholder="Promo code">
@@ -409,24 +405,13 @@
                         <div id="paypal" class="custom-control custom-radio">
                         </div>
                         <hr class="mb-4">
-                        <button class="btn btn-primary btn-lg btn-block" type="submit">Continue to checkout</button>
+                        <button class="btn btn-primary btn-lg btn-block" type="submit">Continue to payment</button>
                     </form>
                 </div>
             </div>
         </div>
     </div>
 </main>
-
-<!-- Footer -->
-<footer class="footer-container">
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                &copy; Bootstrap 4 Carousel with Multiple Items. Download it for free on <a href="https://azmind.com">AZMIND</a>.
-            </div>
-        </div>
-    </div>
-</footer>
 
 <!-- Javascript -->
 <script src="/js/Admin/jquery.js"></script>
@@ -469,35 +454,5 @@
 
 
 </script>
-<script src="https://www.paypal.com/sdk/js?client-id=AVGb1kVA3fCbt3rHo2wUoOIvoK0gJnnAfHPanEoRhI0RHLocUNsX7dGViu2aetmZGzByr0vonqo0IJT1&currency=SEK" data-namespace="paypal_sdk"></script>
-<script>
-    paypal_sdk.Buttons({
-        createOrder:function (data, actions) {
-           return actions.order.create({
-               purchase_units:[{
-                   amount:{
-                       value:'0.1'
-                   }
-               }]
-           });
-        },
-        onApprove:function (data,actions) {
-            return actions.order.capture().then(function (details) {
-                console.log(details);
-                window.location.replace("/User/Checkout/Sucess/" + details.status)
-            })
-        },
-        onCancel:function (data) {
-            return actions.order.capture().then(function (details) {
-            window.location.replace("/User/Checkout/Sucess/" + details.status)
-            })
-        }
-    }).render("#paypal");
-
-
-
-</script>
-
 </body>
-
 </html>
