--- a/src/main/resources/templates/Frontend/User/Payment.mustache
+++ b/src/main/resources/templates/Frontend/User/Payment.mustache
@@ -165,24 +165,18 @@
                             </form>
                         </div>
                         <div class="col-md-8 order-md-1">
-                            <h4 class="mb-3">Billing address</h4>
-                            <form class="needs-validation" novalidate method="POST" action="/User/createOrder">
+                            <h4 class="mb-3">Order Details</h4>
+                            <form class="needs-validation" novalidate>
                                 <div class="row">
                                     <div class="col-md-6 mb-3">
                                         <label for="firstName">First name</label>
                                         <input type="text" class="form-control" id="firstName" placeholder="" value="{{userData.firstName}}" name="firstName"
-                                               required>
-                                        <div class="invalid-feedback">
-                                            Valid first name is required.
-                                        </div>
+                                               disabled>
                                     </div>
                                     <div class="col-md-6 mb-3">
                                         <label for="lastName">Last name</label>
                                         <input type="text" class="form-control" id="lastName" placeholder="" value="{{userData.lastName}}" name="lastName"
-                                               required>
-                                        <div class="invalid-feedback">
-                                            Valid last name is required.
-                                        </div>
+                                               disabled>
                                     </div>
                                 </div>
 
@@ -193,82 +187,13 @@
                                             <span class="input-group-text">@</span>
                                         </div>
                                         <input type="text" class="form-control" id="username" placeholder="Username"
-                                               required value="{{userData.userId}}" name="userId">
-                                        <div class="invalid-feedback" style="width: 100%;">
-                                            Your username is required.
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="mb-3">
-                                    <label for="email">Email <span class="text-muted">(Optional)</span></label>
-                                    <input type="email" class="form-control" id="email" placeholder="you@example.com" value="{{userData.email}}">
-                                    <div class="invalid-feedback">
-                                        Please enter a valid email address for shipping updates.
-                                    </div>
-                                </div>
-
-                                <div class="mb-3">
-                                    <label for="address">Address</label>
-                                    <input type="text" class="form-control" id="address" placeholder="1234 Main St"
-                                           required>
-                                    <div class="invalid-feedback">
-                                        Please enter your shipping address.
-                                    </div>
-                                </div>
-
-                                <div class="mb-3">
-                                    <label for="address2">Address 2 <span class="text-muted">(Optional)</span></label>
-                                    <input type="text" class="form-control" id="address2"
-                                           placeholder="Apartment or suite">
-                                </div>
-
-                                <div class="row">
-                                    <div class="col-md-5 mb-3">
-                                        <label for="country">Country</label>
-                                        <select class="custom-select d-block w-100" id="country" required>
-                                            <option value="">Choose...</option>
-                                            <option>Sweden</option>
-                                            <option>Norway</option>
-                                            <option>Denmark</option>
-                                            <option>Finland</option>
-                                            <option>Germany</option>
-                                            <option>United States</option>
-                                        </select>
-                                        <div class="invalid-feedback">
-                                            Please select a valid country.
-                                        </div>
-                                    </div>
-                                    <div class="col-md-4 mb-3">
-                                        <label for="city">City</label>
-                                        <input type="text" class="form-control" id="City"
-                                               placeholder="Stad">
-                                        <div class="invalid-feedback">
-                                            Please provide a valid city.
-                                        </div>
-                                    </div>
-                                    <div class="col-md-3 mb-3">
-                                        <label for="zip">Zip</label>
-                                        <input type="text" class="form-control" id="zip" placeholder="" required>
-                                        <div class="invalid-feedback">
-                                            Zip code required.
-                                        </div>
+                                               disabled value="{{userData.userId}}" name="userId">
                                     </div>
                                 </div>
                                 <hr class="mb-4">
-                                <div class="custom-control custom-checkbox">
-                                    <input type="checkbox" class="custom-control-input" id="same-address">
-                                    <label class="custom-control-label" for="same-address">Shipping address is the same
-                                        as my billing address</label>
+                                <h4 class="mb-3">Payment</h4>
+                                <div id="paypal" class="input-group">
                                 </div>
-                                <div class="custom-control custom-checkbox">
-                                    <input type="checkbox" class="custom-control-input" id="save-info">
-                                    <label class="custom-control-label" for="save-info">Save this information for next
-                                        time</label>
-                                </div>
-                                <hr class="mb-4">
-                                <button class="btn btn-primary btn-lg btn-block" type="submit">Continue to checkout
-                                </button>
                                 <hr class="mb-4">
                             </form>
                         </div>
@@ -283,27 +208,33 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
         crossorigin="anonymous"></script>
 <script src="/js/Admin/scripts.js"></script>
+<script src="https://www.paypal.com/sdk/js?client-id=AVGb1kVA3fCbt3rHo2wUoOIvoK0gJnnAfHPanEoRhI0RHLocUNsX7dGViu2aetmZGzByr0vonqo0IJT1&currency=SEK" data-namespace="paypal_sdk"></script>
 <script>
-    // Example starter JavaScript for disabling form submissions if there are invalid fields
-    (function () {
-        'use strict';
-        window.addEventListener('load', function () {
-            // Fetch all the forms we want to apply custom Bootstrap validation styles to
-            var forms = document.getElementsByClassName('needs-validation');
-
-            // Loop over them and prevent submission
-            var validation = Array.prototype.filter.call(forms, function (form) {
-                form.addEventListener('submit', function (event) {
-                    if (form.checkValidity() === false) {
-                        event.preventDefault();
-                        event.stopPropagation();
+    paypal_sdk.Buttons({
+        createOrder:function (data, actions) {
+            return actions.order.create({
+                purchase_units:[{
+                    amount:{
+                        value:'0.1'
                     }
-                    form.classList.add('was-validated');
-
-                }, false);
+                }]
             });
-        }, false);
-    })();
+        },
+        onApprove:function (data,actions) {
+            return actions.order.capture().then(function (details) {
+                console.log(details);
+                window.location.replace("/User/Checkout/Sucess/" + details.status)
+            })
+        },
+        onCancel:function (data) {
+            return actions.order.capture().then(function (details) {
+                window.location.replace("/User/Checkout/Sucess/" + details.status)
+            })
+        }
+    }).render("#paypal");
+
+
+
 </script>
 </body>
 </html>
