--- a/src/main/resources/templates/Frontend/User/Payment.mustache
+++ b/src/main/resources/templates/Frontend/User/Payment.mustache
@@ -278,12 +278,12 @@
             return actions.order.capture().then(function (details) {
                 console.log(details);
 
-                window.location.replace("/Index/Checkout/Status/" + details.status)
+                window.location.replace("/User/Checkout/Status/" + details.status)
             })
         },
         onCancel: function (data, actions) {
             return actions.order.capture().then(function (details) {
-                window.location.replace("/Index/Checkout/Status/" + details.status)
+                window.location.replace("/User/Checkout/Status/" + details.status)
             })
         }
     }).render("#paypal");
